// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:760px) {
  .text {
    position: absolute;
    height: 1px;
    width: auto;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:1000px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:1300px) {
  .text {
    position: absolute;
    height: 1px;
    width: auto;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:1760px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 2px 0 0 8px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #CB3333 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #CB3333 !important;
  background-color: #CB3333 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #9a2727 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #9a2727 !important;
    background-color: #9a2727 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #E7323B !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #E7323B !important;
  background-color: #E7323B !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #c51720 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #c51720 !important;
    background-color: #c51720 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FBFCFF !important;
  background-color: #FBFCFF !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FBFCFF !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #AFB0B3 !important;
    background-color: #AFB0B3 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #010205 !important;
  background-color: #010205 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #010205 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #535457 !important;
    background-color: #535457 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #00C77E !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #00C77E !important;
  background-color: #00C77E !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #008a57 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #008a57 !important;
    background-color: #008a57 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #32B85B !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #32B85B !important;
  background-color: #32B85B !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #258843 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #258843 !important;
    background-color: #258843 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #CB3333 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #CB3333 !important;
  background-color: #CB3333 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #9a2727 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #9a2727 !important;
    background-color: #9a2727 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #E7323B !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #E7323B !important;
  background-color: #E7323B !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #c51720 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #c51720 !important;
    background-color: #c51720 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FBFCFF !important;
  background-color: #FBFCFF !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FBFCFF !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #AFB0B3 !important;
    background-color: #AFB0B3 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #010205 !important;
  background-color: #010205 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #010205 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #535457 !important;
    background-color: #535457 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #00C77E !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #00C77E !important;
  background-color: #00C77E !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #008a57 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #008a57 !important;
    background-color: #008a57 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #32B85B !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #32B85B !important;
  background-color: #32B85B !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #0A0AFF !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #258843 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #258843 !important;
    background-color: #258843 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true and theme dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #FBFCFF;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true and theme light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background-size: calc(6px + 2.125ex) !important;
  background-color: transparent !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  height: 1px;
  width: auto;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
  color: #010205;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;
